--- a/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
@@ -28,10 +28,10 @@
 
 
     <td>
-      <button type="button" class="btn btn-danger btn-sm" (click)="del(coupon)">-</button>
+      <button [disabled] = "coupon.quantity === 1" type="button" class="btn btn-danger btn-sm" (click)="del(coupon)">-</button>
     </td>
     <td>
-      <button type="button" class="btn btn-primary btn-sm" (click)="add(coupon)">+</button>
+      <button [disabled] = "coupon.quantity === maximumQuantity(coupon.id)" type="button" class="btn btn-primary btn-sm" (click)="add(coupon)">+</button>
     </td>
 
     <td>
