--- a/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
@@ -63,4 +63,23 @@
   </tbody>
 
 </table>
-<button type="button" class="btn btn-block btn-success" (click)="buy(cartArray)">Buy</button>
+<button type="button" class="btn btn-block btn-success" (click)="openModal(template_buy)">Buy</button>
+<ng-template #template_buy>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Buy</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <p>Confirm buy the Coupons in the cart?</p>
+
+
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger" (click)="decline()">No</button>
+    <button type="button" class="btn btn-success" (click)="buy(cartArray)">Yes</button>
+  </div>
+</ng-template>
