--- a/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
+++ b/src/app/features/reserved-area/broker/package-edit/package-edit.component.html
@@ -33,21 +33,20 @@
             <div class="form-group row">
               <label class="col-lg-3 col-sm-3 col-form-label">Immagine</label>
 
-              <div class="col-lg-2 col-sm-4 col-form-label" id="yourImage">
+              <div class="col-lg-9 col-sm-4 col-form-label" id="yourImage">
                 <img src="{{imageSelected? imageSelected: imageURL}}">
               </div>
-              <div >
-                <label  class="col-lg-3 col-sm-6 col-form-label" style="padding-right: 8px">Cambia immagine </label>
-
-                <input (change)="preview(file.files)" #file class="col-lg-9 col-sm-6 col-form-label" accept="image/*" type="file"  formControlName="image" ng2FileSelect [uploader]="uploader"
-                       [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
-
-              </div>
-
               <div *ngIf="submitted && f.image.errors" class="invalid-feedback">
                 <div>Immagine obbligatoria.</div>
               </div>
-            </div> <!-- Image -->
+            </div>
+            <div class="form-group row">
+              <label  class="col-lg-3 col-md-3 col-sm-3 col-12 col-form-label" style="padding-right: 8px">Cambia immagine </label>
+
+              <input (change)="preview(file.files)" #file class="col-lg-9 col-md-9 col-sm-9 col-12" accept="image/*" type="file"  formControlName="image" ng2FileSelect [uploader]="uploader"
+                     [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
+
+            </div><!-- Image -->
             <div class="form-group row">
               <label class="col-12 col-3 col-lg-3 col-sm-3 col-form-label">Prezzo</label>
               <div class="col-8 col-5 col-lg-7 col-sm-7">
@@ -120,7 +119,7 @@
               <label class="col-lg-3 col-sm-3 col-form-label"></label>
               <ul class="col-sm-8">
                 <li *ngFor="let el of selectedCoupons" class="list-group-item d-flex justify-content-between align-items-center">
-                  <span class="text-left">{{el.coupon.title}}</span>
+                  <span  class="text-left">{{el.coupon.title}}</span>
                   <span class="text-right">
                     <span class="badge badge-primary badge-pill mr-1">{{el.quantity}}</span>
                       <i *ngIf="!fromEdit" class="fas fa-edit mr-1 text-secondary cursor-pointer" (click)="openModal(couponAdding, el.coupon.id, true)"></i>
