--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -242,7 +242,7 @@
 <div *ngIf="cart.length === 0" class="container-fluid">
   <div class="col-sm-12 text-center">
     <img class="img-fluid" src="assets/img/empty.png">
-    <h3 class="display-3" style="font-size: 2rem;">la cassa è vuoto!</h3>
+    <h3 class="display-3" style="font-size: 2rem;">la cassa è vuota!</h3>
   </div>
   <div class="col-sm-12 mt-4 text-center d-xl-block d-lg-block d-md-block d-sm-block d-none">
     <button *ngIf="isUserLoggedIn && true" class="btn btn-lg btn-success mr-2" type="button" (click)="openBought()">
